[gd_scene load_steps=14 format=3 uid="uid://cx4hj0y7bd6fr"]

[ext_resource type="Script" uid="uid://bhwronuqqv353" path="res://Scenes/Note/parts/note_item.gd" id="1_8sy3s"]
[ext_resource type="PackedScene" uid="uid://c7n7pxhkwpt0k" path="res://UI/SvgIcon/SVGIcon.tscn" id="2_ufg05"]
[ext_resource type="StyleBox" uid="uid://dr0kq08kg1hre" path="res://Styles/BlackPanel.tres" id="3_ufg05"]
[ext_resource type="FontFile" uid="uid://dlia1t71max12" path="res://Fonts/PixelOperator.ttf" id="4_ufg05"]
[ext_resource type="PackedScene" uid="uid://nkqud1uuvula" path="res://Scenes/Note/parts/NoteLineItem.tscn" id="5_y0n8y"]
[ext_resource type="PackedScene" uid="uid://cajdcn0ommfho" path="res://UI/Buttons/ItemBtn/ItemBtn.tscn" id="6_ft5pi"]
[ext_resource type="LabelSettings" uid="uid://oew3p1gg5ddw" path="res://Fonts/font_2_16_black.tres" id="7_3wqeu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ufg05"]
bg_color = Color(0.0497766, 0.0497766, 0.0497766, 1)
shadow_offset = Vector2(3, 3)

[sub_resource type="LabelSettings" id="LabelSettings_78mjc"]
font = ExtResource("4_ufg05")
font_color = Color(0.266667, 1, 0.2, 0.8)
outline_size = 2
outline_color = Color(0.346667, 1, 0.2, 0.501961)

[sub_resource type="LabelSettings" id="LabelSettings_0kih4"]
font = ExtResource("4_ufg05")
font_color = Color(0.266667, 1, 0.2, 0.8)
outline_size = 2
outline_color = Color(0.346667, 1, 0.2, 0.501961)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3wqeu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3wqeu"]
bg_color = Color(0, 0, 0, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.909804, 0.105882, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="LabelSettings" id="LabelSettings_ft5pi"]
font = ExtResource("4_ufg05")
font_size = 32
font_color = Color(0, 0.909804, 0.105882, 1)
outline_size = 2
outline_color = Color(0, 0.96, 0.272, 0.419608)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.380392)
shadow_offset = Vector2(2, 2)

[node name="NoteItem" type="PanelContainer"]
offset_right = 41.0
offset_bottom = 25.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ufg05")
script = ExtResource("1_8sy3s")

[node name="SelectedControl" type="Control" parent="."]
layout_mode = 2

[node name="SVGIcon" parent="SelectedControl" instance=ExtResource("2_ufg05")]
layout_mode = 0
offset_left = 8.0
offset_top = 43.0
offset_right = 28.0
offset_bottom = 63.0
icon = 38
icon_color = Color(0, 0, 0, 1)

[node name="PanelContainer" type="PanelContainer" parent="SelectedControl"]
layout_mode = 0
offset_top = 53.0
offset_right = 120.0
offset_bottom = 98.0
theme_override_styles/panel = ExtResource("3_ufg05")

[node name="MarginContainer" type="MarginContainer" parent="SelectedControl/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="SelectedControl/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Action" type="HBoxContainer" parent="SelectedControl/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="ColorRect" type="ColorRect" parent="SelectedControl/PanelContainer/MarginContainer/HBoxContainer/Action"]
custom_minimum_size = Vector2(25, 30)
layout_mode = 2
color = Color(0, 0.964706, 0.278431, 1)

[node name="MarginContainer" type="MarginContainer" parent="SelectedControl/PanelContainer/MarginContainer/HBoxContainer/Action/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SelectedControl/PanelContainer/MarginContainer/HBoxContainer/Action/ColorRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "E"
label_settings = ExtResource("7_3wqeu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionLabel" type="Label" parent="SelectedControl/PanelContainer/MarginContainer/HBoxContainer/Action"]
layout_mode = 2
text = "Open notes"
label_settings = SubResource("LabelSettings_78mjc")

[node name="Back" type="HBoxContainer" parent="SelectedControl/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="ColorRect" type="ColorRect" parent="SelectedControl/PanelContainer/MarginContainer/HBoxContainer/Back"]
custom_minimum_size = Vector2(25, 30)
layout_mode = 2
color = Color(0, 0.964706, 0.278431, 1)

[node name="MarginContainer" type="MarginContainer" parent="SelectedControl/PanelContainer/MarginContainer/HBoxContainer/Back/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SelectedControl/PanelContainer/MarginContainer/HBoxContainer/Back/ColorRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "B"
label_settings = ExtResource("7_3wqeu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="SelectedControl/PanelContainer/MarginContainer/HBoxContainer/Back"]
layout_mode = 2
text = "Back"
label_settings = SubResource("LabelSettings_0kih4")

[node name="NoteControl" type="Control" parent="."]
visible = false
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="NoteControl"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
offset_left = -1.0
offset_top = 53.0
offset_right = 243.0
offset_bottom = 197.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_3wqeu")

[node name="NoteContainer" type="PanelContainer" parent="NoteControl/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("3_ufg05")

[node name="VBoxContainer" type="VBoxContainer" parent="NoteControl/PanelContainer/NoteContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="NoteControl/PanelContainer/NoteContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="NoteControl/PanelContainer/NoteContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NoteList" type="VBoxContainer" parent="NoteControl/PanelContainer/NoteContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NoteItem" parent="NoteControl/PanelContainer/NoteContainer/VBoxContainer/MarginContainer/VBoxContainer/NoteList" instance=ExtResource("5_y0n8y")]
layout_mode = 2

[node name="AddNoteBtn" parent="NoteControl/PanelContainer/NoteContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("6_ft5pi")]
modulate = Color(1, 1, 1, 0.5)
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_3wqeu")
title = "Create new note..."
COLOR_A = Color(0, 0.909804, 0.105882, 1)

[node name="MarginContainer2" type="MarginContainer" parent="NoteControl/PanelContainer/NoteContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="NoteControl/PanelContainer/NoteContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Action" type="HBoxContainer" parent="NoteControl/PanelContainer/NoteContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="ColorRect" type="ColorRect" parent="NoteControl/PanelContainer/NoteContainer/VBoxContainer/MarginContainer2/HBoxContainer/Action"]
custom_minimum_size = Vector2(25, 30)
layout_mode = 2
color = Color(0, 0.964706, 0.278431, 1)

[node name="MarginContainer" type="MarginContainer" parent="NoteControl/PanelContainer/NoteContainer/VBoxContainer/MarginContainer2/HBoxContainer/Action/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="NoteControl/PanelContainer/NoteContainer/VBoxContainer/MarginContainer2/HBoxContainer/Action/ColorRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "E"
label_settings = ExtResource("7_3wqeu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionLabel" type="Label" parent="NoteControl/PanelContainer/NoteContainer/VBoxContainer/MarginContainer2/HBoxContainer/Action"]
layout_mode = 2
text = "Action"
label_settings = SubResource("LabelSettings_78mjc")

[node name="Back" type="HBoxContainer" parent="NoteControl/PanelContainer/NoteContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="ColorRect" type="ColorRect" parent="NoteControl/PanelContainer/NoteContainer/VBoxContainer/MarginContainer2/HBoxContainer/Back"]
custom_minimum_size = Vector2(25, 30)
layout_mode = 2
color = Color(0, 0.964706, 0.278431, 1)

[node name="MarginContainer" type="MarginContainer" parent="NoteControl/PanelContainer/NoteContainer/VBoxContainer/MarginContainer2/HBoxContainer/Back/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="NoteControl/PanelContainer/NoteContainer/VBoxContainer/MarginContainer2/HBoxContainer/Back/ColorRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "B"
label_settings = ExtResource("7_3wqeu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="NoteControl/PanelContainer/NoteContainer/VBoxContainer/MarginContainer2/HBoxContainer/Back"]
layout_mode = 2
text = "Back"
label_settings = SubResource("LabelSettings_0kih4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SVGIcon" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_ufg05")]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
icon = 52
icon_color = Color(0, 0.91, 0.106167, 1)
icon_size = Vector2(25, 25)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = -2

[node name="CountLabel" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_ft5pi")
